--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "db:setup": "tsx scripts/setup-database.ts",
     "db:reset": "tsx scripts/setup-database.ts"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/adapter-better-sqlite3": "7.3.0",
     "@prisma/client": "^6.19.2",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -43,7 +45,6 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
-    "better-sqlite3": "12.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -70,8 +71,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
-    "@types/better-sqlite3": "^7.6.12",
-    "@types/node": "^22",
+    "@types/node": "^22.19.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
@@ -80,6 +80,6 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
