--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
+ "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",  
     "start": "next start",
     "lint": "eslint .",
     "db:setup": "tsx scripts/setup-database.ts",
-    "db:reset": "tsx scripts/setup-database.ts"
+    "db:reset": "tsx scripts/setup-database.ts",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
